--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
-Platinum/Build/Targets/arm-apple-darwin/CocoaTouchBrowser/*.xcodeproj/*.mode1v3
-Platinum/Build/Targets/arm-apple-darwin/CocoaTouchBrowser/*.xcodeproj/*.mode2v3
-Platinum/Build/Targets/arm-apple-darwin/CocoaTouchBrowser/*.xcodeproj/*.pbxuser
-Platinum/Build/Targets/arm-apple-darwin/Platinum/*.xcodeproj/*.mode1v3
-Platinum/Build/Targets/arm-apple-darwin/Platinum/*.xcodeproj/*.mode2v3
-Platinum/Build/Targets/arm-apple-darwin/Platinum/*.xcodeproj/*.pbxuser
+# Xcode
+build/*
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
+xcuserdata
+profile
+*.moved-aside
